# vs-package-poc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hatch_build.py  meson.build  old_README.md  pyproject.toml
AWarp/: awarp.cpp
