[build-system]
requires = ["hatchling", "packaging", "ziglang"]
build-backend = "hatchling.build"

[project]
name = "vapoursynth-zsmooth"
description = "Cross-platform, cross-architecture video smoothing functions for Vapoursynth, written in Zig"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["vapoursynth"]
dynamic = ["version"]

# Development dependencies to assist with script development and linting
[dependency-groups]
dev = ["hatchling", "packaging", "ziglang", "ruff", "mypy"]

[tool.hatch.version]
source = "regex"
path = "build.zig.zon"
pattern = '\.version\s*=\s*"(?P<version>[^"]+)"'

# Maybe more options here to exclude/include the relevant files
# [tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins"]
artifacts = [
    "vapoursynth/plugins/*.dylib",
    "vapoursynth/plugins/*.so",
    "vapoursynth/plugins/*.dll",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
